--- a/.env
+++ b/.env
@@ -3,9 +3,8 @@ APP_PORT = 8080
 
 #DB credentials
 DB_USERNAME = postgres
-DB_PASSWORD = admin
-DB_DATABASENAME = competition_db
-DB_HOST = localhost
+DB_DATABASENAME = postgres
+DB_HOST = 34.122.183.73
 DB_PORT = 5432
 
 # jwt info
